--- a/NoteBooks/day01_ooi_data_access/day01_phsen_data_access.ipynb
+++ b/NoteBooks/day01_ooi_data_access/day01_phsen_data_access.ipynb
@@ -4,16 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Quality Flags to Create and Utilize Annotations\n",
+    "# Flagging pH measurements based on data quality\n",
     "\n",
-    "OOI utilizes the SAMI2-pH sensor from [Sunburst Sensors, LLC](http://www.sunburstsensors.com/) to measure seawater pH at multiple locations throughout the different arrays. Assessing the quality of the data from the instrument is an involved process as there are multiple parameters produced by the instrument that are then used to calculate the seawater pH. These different measurements are subject to different sources of error, and those errors can propogate through the calculations to create an erroneous seawater pH value. Based upon the vendor documentation and Matlab code they provide to convert the raw measurements, we can create [a set of rules](https://github.com/oceanobservatories/ooi-data-explorations/blob/master/python/ooi_data_explorations/uncabled/process_phsen.py#L152) from those different measurements to flag the pH data as either `pass`, `suspect` or `fail` (using the QARTOD flag values of 1, 3 and 4, respectively).\n",
-    "\n",
-    "The resulting flags can be used to remove `fail` data from any analysis. They can also be used to help generate annotations that can be used during further Human in the Loop (HITL) QC checks of the data to help refine quality metrics for the data. The code below will show how the quality rules can be used to remove bad pH data from a time series, and how they can be used to then create annotations. The impact of using these flags is shown with a set of before and after plots of the seawater pH as a function of temperature."
+    "OOI utilizes the SAMI2-pH sensor from [Sunburst Sensors, LLC](http://www.sunburstsensors.com/) to measure seawater pH at multiple locations throughout the different arrays. Assessing the quality of the data from the instrument is an involved process as there are multiple parameters produced by the instrument that are then used to calculate the seawater pH. These different measurements are subject to different sources of error, and those errors can propogate through the calculations to create an erroneous seawater pH value. Based upon the vendor documentation and Matlab code they provide to convert the raw measurements, we can create [a set of rules](https://github.com/oceanobservatories/ooi-data-explorations/blob/master/python/ooi_data_explorations/uncabled/process_phsen.py#L152) from those different measurements to flag the pH data as either `pass`, `suspect` or `fail` (using the QARTOD flag values of 1, 3 and 4, respectively)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -56,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading and Processing the Data Files: 100%|██████████| 1/1 [00:04<00:00,  4.16s/it]"
+      "Downloading and Processing the Data Files: 100%|██████████| 1/1 [00:00<00:00,  1.30it/s]"
      ]
     },
     {
@@ -108,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x159014be0>"
+       "<matplotlib.legend.Legend at 0x165ceaa70>"
       ]
      },
      "execution_count": 3,
