--- a/NoteBooks/day_3_xarray_tutorial.ipynb
+++ b/NoteBooks/day_3_xarray_tutorial.ipynb
@@ -1032,7 +1032,7 @@
     }
    ],
    "source": [
-    "# Pull out \"air\" DataArray with dictionary syntax\n",
+    "# Grab \"air\" DataArray with dictionary syntax\n",
     "ds[\"air\"]"
    ]
   },
@@ -1521,7 +1521,7 @@
     }
    ],
    "source": [
-    "# Pull out DataArray using dot notation\n",
+    "# Grab DataArray using dot notation\n",
     "ds.air"
    ]
   },
@@ -1529,7 +1529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This won't work for variable names that clash with a built-in method name (e.g. `mean`)."
+    "This won't work for variable names that clash with a built-in method name (e.g. `copy`)."
    ]
   },
   {
@@ -2065,7 +2065,7 @@
     }
    ],
    "source": [
-    "# Extracting coordinate variables\n",
+    "# Grab coordinate variables directly using dictionary notation\n",
     "da[\"lon\"]"
    ]
   },
@@ -2491,7 +2491,7 @@
     }
    ],
    "source": [
-    "# Extracting coordinate variables from .coords\n",
+    "# Grab coordinate variables from .coords\n",
     "da.coords[\"lon\"]"
    ]
   },
@@ -3356,7 +3356,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Extracting data or \"indexing\" \n",
+    "## Grabbing data or \"indexing\" \n",
     "\n",
     "Xarray supports\n",
     "\n",
@@ -3906,7 +3906,7 @@
     }
    ],
    "source": [
-    "# Pull data for all of 2013-May\n",
+    "# Grab data for all of 2013-May\n",
     "ds.sel(time=\"2013-05\")"
    ]
   },
