--- a/NoteBooks/day_3_xarray_tutorial.ipynb
+++ b/NoteBooks/day_3_xarray_tutorial.ipynb
@@ -14345,7 +14345,7 @@
     }
    ],
    "source": [
-    "mean_dask.data.visualize(\"mean_aggreagtion.png\")"
+    "mean_dask.data.visualize(\"mean_aggregation.png\")"
    ]
   },
   {
